no need to yield, using continuation-local field is enough